k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digpos
spec:
  selector:
    matchLabels:
      app: digpos
  replicas: 2
  template:
    metadata:
      labels:
        app: digpos
    spec:
      containers:
        - name: inventory
          image: dxcore98/inventory:latest
          ports:
            - containerPort: 3000
