k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digpos
spec:
  rules:
    - host: digvation.tech
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: digpos-svc
                port:
                  number: 3000
